Profiles list page layout issue

--- a/app/assets/stylesheets/profiles.css.scss
+++ b/app/assets/stylesheets/profiles.css.scss
@@ -131,7 +131,7 @@
 
 #profiles-index {
   .pagination-top {
-    float: right;
+    text-align: right;
   }
 }
 
